Fixed issue with game-status text going out of boundaries
- Fixed the out-of-bounds issue with the game-status text by increasing
the width of the elements from 30% to 40%

--- a/color-picker.css
+++ b/color-picker.css
@@ -39,7 +39,7 @@ header{
 
 .optionsItem{
   font-family: 'Monda', sans-serif;
-  width: 30%;
+  width: 40%;
   font-size: 1em;
   font-weight: 400;
 }
